--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.web.locale-resolver=fixed
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
+
+spring.mvc.hiddenmethod.filter.enabled=true
